# James_etl_pipeline

./: .env  README.md  pyproject.toml  {gitignore
data/: cleaned_data.csv
src/: api.py  data_transform.py  db_loader.py  web_scraper.py
tests/: scraper_sample.json  test_db_loader.py  test_scraper.py  test_transform.py
