[tool.poetry]
name = "etl-pipeline"
version = "0.1.0"
description = "API-based ETL pipeline using FastAPI, Polars, and Pandas"
authors = ["James"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
polars = "^0.20.5"
pandas = "^2.2.1"
requests = "^2.31.0"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
